--- a/resources/css/style_index.css
+++ b/resources/css/style_index.css
@@ -1,13 +1,18 @@
+::selection {
+	background: #54f0ff;
+}
 .two{
 	color: #000;
-	border: 6px solid #fb8500;
+	border: 3px solid; 
+	border-image: linear-gradient(122deg, rgba(194, 106, 245, 1), rgba(84, 240, 255, 1)) 1;
+	
 	padding: 10px;
 	box-sizing: border-box;
-	color: #fff;
+	background-image: linear-gradient(122deg, rgba(194, 106, 245, .3), rgba(84, 240, 255, .3));
 	font-family: Arial;
 	width: 400px;
-	margin: 0px auto;
-	border-radius: 20px;
+	margin: 20px auto 40px;
+
 }
 .two h1{
 	margin: 10px 0;
@@ -24,19 +29,17 @@
 .name_reg{
 	display: flex;
 }
-::selection {
-background: #fb8500;
-}
+
 
 .two select{
-	background: #333;
-	color: #fff;
-	border: 2px inset #333;
+	background: #fff;
+	color: #000;
+	border: 2px inset #54f0ff;
 }
 .two input{
-	color: #fff;
-	background: #333;
-	border: 2px inset #333;
+	color: #000;
+	background: #fff;
+	border: 2px inset #54f0ff;
 	padding: 4px;
 	box-sizing: border-box;
 }
@@ -45,13 +48,13 @@ background: #fb8500;
 }
 .two input[type='radio']:after,
 .two input[type='checkbox']:after {
-        width: 11px;
-        height: 11px;
+        width: 13px;
+        height: 13px;
         top: 0;
         left: 0;
-        border: 1.5px solid #ccc;
+        border: 1.5px solid #54f0ff;
         position: relative;
-        background-color: #333;
+        background-color: #fff;
         content: '';
         display:block;
         visibility: visible;
@@ -61,15 +64,15 @@ background: #fb8500;
 }
 .two input[type='checkbox']:checked:after{
 	content: 'X';
-	color: #000;
+	color: #fff;
 	font-weight: bold;
 	text-align: center;
-	font-size: 11px;
+	font-size: 12px;
 	line-height: 11.5px;
 }
 .two input[type='radio']:checked:after,
 .two input[type='checkbox']:checked:after{
-        background-color: #fb8500;
+        background-color: #54f0ff;
     }
 .two .data_wrap{
 	display: flex;
@@ -87,11 +90,80 @@ background: #fb8500;
 	color: #fff;
 }
 .two button{
-	background: #333;
+	background-image: linear-gradient(120deg, rgba(194, 106, 245, 1), rgba(84, 240, 255, 1));
 	border-color: #fb8500;
-	color: #fff;
+	color: #000;
 	font-weight: bold;
 	border-radius: 6px;
+	animation: 1s button infinite;
+}
+.two button:hover{	
+	animation: 1s button forwards;
+}
+@keyframes button{
+	0%{
+		background-image: linear-gradient(120deg, rgba(194, 106, 245, 1), rgba(84, 240, 255, 1));	
+	}
+	5%{
+		background-image: linear-gradient(130deg, rgba(194, 106, 245, 1), rgba(84, 240, 255, 1));
+	}
+	10%{
+		background-image: linear-gradient(140deg, rgba(194, 106, 245, 1), rgba(84, 240, 255, 1));
+	}
+	15%{
+		background-image: linear-gradient(150deg, rgba(194, 106, 245, 1), rgba(84, 240, 255, 1));
+	}
+	20%{
+		background-image: linear-gradient(160deg, rgba(194, 106, 245, 1), rgba(84, 240, 255, 1));
+	}
+	25%{
+		background-image: linear-gradient(170deg, rgba(194, 106, 245, 1), rgba(84, 240, 255, 1));
+	}
+	30%{
+		background-image: linear-gradient(180deg, rgba(194, 106, 245, 1), rgba(84, 240, 255, 1));
+	}
+	35%{
+		background-image: linear-gradient(190deg, rgba(194, 106, 245, 1), rgba(84, 240, 255, 1));
+	}
+	40%{
+		background-image: linear-gradient(200deg, rgba(194, 106, 245, 1), rgba(84, 240, 255, 1));
+	}
+	45%{
+		background-image: linear-gradient(210deg, rgba(194, 106, 245, 1), rgba(84, 240, 255, 1));
+	}
+	50%{
+		background-image: linear-gradient(220deg, rgba(194, 106, 245, 1), rgba(84, 240, 255, 1));
+	}
+	55%{
+		background-image: linear-gradient(210deg, rgba(194, 106, 245, 1), rgba(84, 240, 255, 1));	
+	}
+	60%{
+		background-image: linear-gradient(200deg, rgba(194, 106, 245, 1), rgba(84, 240, 255, 1));
+	}
+	65%{
+		background-image: linear-gradient(190deg, rgba(194, 106, 245, 1), rgba(84, 240, 255, 1));
+	}
+	70%{
+		background-image: linear-gradient(180deg, rgba(194, 106, 245, 1), rgba(84, 240, 255, 1));
+	}
+	75%{
+		background-image: linear-gradient(170deg, rgba(194, 106, 245, 1), rgba(84, 240, 255, 1));
+	}
+	80%{
+		background-image: linear-gradient(160deg, rgba(194, 106, 245, 1), rgba(84, 240, 255, 1));
+	}
+	85%{
+		background-image: linear-gradient(150deg, rgba(194, 106, 245, 1), rgba(84, 240, 255, 1));
+	}
+	90%{
+		background-image: linear-gradient(140deg, rgba(194, 106, 245, 1), rgba(84, 240, 255, 1));
+	}
+	95%{
+		background-image: linear-gradient(130deg, rgba(194, 106, 245, 1), rgba(84, 240, 255, 1));
+	}
+	100%{
+		background-image: linear-gradient(120deg, rgba(194, 106, 245, 1), rgba(84, 240, 255, 1));
+	}
 }
 .two button[disabled]{
 	opacity: 0.4;
@@ -102,11 +174,11 @@ background: #fb8500;
 	box-sizing: border-box;
 }
 .two .error{
-	border-bottom: 3px inset #a00;
-	background: rgba(100, 0, 0, .2);
+	border-bottom: 3px inset #f00;
+	background: #faa;
 }
 
 .two .success{
-	border-bottom: 3px solid #5f5;
-	background: rgba(85, 255, 85, .2);
+	border-bottom: 3px solid #0f0;
+	background: #afa;
 }
