--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -71,12 +71,12 @@
 /** 1.1. Vendor **/
 /** 1.1.1.	Google fonts **/
 /** 1.1.2.	Icon Fonts **/
-@import url("http://localhost/laravel-web21/resources/sass/components/Vendor/font-awesome/font-awesome.min.css");
-@import url("http://localhost/laravel-web21/resources/sass/components/Vendor/simple-line-icon/css/simple-line-icons.css");
-@import url("http://localhost/laravel-web21/resources/sass/components/Vendor/blanch/fonts.css");
-@import url("http://localhost/laravel-web21/resources/sass/components/Vendor/Helvetica/fonts.css");
-@import url("http://localhost/laravel-web21/resources/sass/components/Vendor/PlayfairDisplay/fonts.css");
-@import url("http://localhost/laravel-web21/resources/sass/components/Vendor/ionicons/css/ionicons.min.css");
+@import url("font-awesome/font-awesome.min.css");
+@import url("simple-line-icon/css/simple-line-icons.css");
+@import url("blanch/fonts.css");
+@import url("Helvetica/fonts.css");
+@import url("PlayfairDisplay/fonts.css");
+@import url("ionicons/css/ionicons.min.css");
 /** 1.1.3. Vendor library **/
 /* EX: @import url('components/Vendor/owlcarousel/owlcarousel.css'); */
 /** 1.2. Bootstrap **/
